AUDL - Add router

--- a/audl/.eslintrc
+++ b/audl/.eslintrc
@@ -11,6 +11,7 @@
         "indent": ["error", 2, { "SwitchCase": 1 }],
         "react/jsx-filename-extension": 0,
         "react/prop-types": 0,
+        "react/prefer-stateless-function": 0,
         "jsx-a11y/anchor-is-valid": 0,
         "jsx-a11y/label-has-for": 0,
         "jsx-a11y/anchor-has-content": 0
