--- a/audl/package.json
+++ b/audl/package.json
@@ -19,6 +19,8 @@
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
