--- a/audl/package.json
+++ b/audl/package.json
@@ -5,19 +5,24 @@
   "proxy": {
     "/gdc": {
       "changeOrigin": true,
+      "secure": false,
       "cookieDomainRewrite": "localhost",
-      "target": "https://secure.gooddata.com/"
+      "target": "https://staging3.intgdc.com/"
     },
     "/*.html": {
+      "changeOrigin": true,
       "secure": false,
-      "target": "https://secure.gooddata.com/"
+      "cookieDomainRewrite": "localhost",
+      "target": "https://staging3.intgdc.com/"
     }
   },
   "dependencies": {
+    "@gooddata/gooddata-js": "^6.0.0-alpha9",
     "@gooddata/react-components": "^4.1.0",
     "prop-types": "^15.6.0",
     "react": "15.3.2",
     "react-dom": "15.3.2",
+    "react-live": "^1.10.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
