--- a/audl/.eslintrc
+++ b/audl/.eslintrc
@@ -6,12 +6,14 @@
     },
     "parser": "babel-eslint",
     "rules": {
+        "class-methods-use-this": 0,
         "no-plusplus": 0,
         "semi": ["error", "always"],
         "indent": ["error", 2, { "SwitchCase": 1 }],
         "react/jsx-filename-extension": 0,
         "react/prop-types": 0,
         "react/prefer-stateless-function": 0,
+        "import/prefer-default-export": 0,
         "jsx-a11y/anchor-is-valid": 0,
         "jsx-a11y/label-has-for": 0,
         "jsx-a11y/anchor-has-content": 0
