gd-ui-boilerplate - <DateFilter />

--- a/gd-ui-boilerplate/package.json
+++ b/gd-ui-boilerplate/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gooddata/react-components": "^7.1.1",
+    "@gooddata/react-components": "7.2.0-alpha-petrjanu-pja-one-4000-2019-10-21T11-23-10-374Z",
     "node-sass": "^4.9.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
