--- a/gd-ui-boilerplate/package.json
+++ b/gd-ui-boilerplate/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@gooddata/react-components": "^7.1.1",
+    "lodash": "^4.17.11",
     "node-sass": "^4.9.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-highcharts": "^16.0.2",
     "react-scripts": "2.0.5",
-    "react-select": "^2.1.1"
+    "react-select": "^2.1.1",
+    "react-vis": "^1.11.6"
   },
   "scripts": {
     "start": "cross-env HTTPS=true react-scripts start",
