--- a/gd-ui-interactive-examples/headline/package.json
+++ b/gd-ui-interactive-examples/headline/package.json
@@ -12,14 +12,9 @@
     "@gooddata/sdk-model": "^8.0.0-beta.107",
     "@gooddata/sdk-ui": "^8.0.0-beta.107",
     "@gooddata/sdk-ui-charts": "^8.0.0-beta.107",
-    "@gooddata/sdk-ui-ext": "^8.0.0-beta.107",
-    "@gooddata/sdk-ui-filters": "^8.0.0-beta.107",
-    "@gooddata/sdk-ui-pivot": "^8.0.0-beta.107",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-highcharts": "16.1.0",
-    "react-scripts": "3.0.1",
-    "react-select": "3.1.0"
+    "react-scripts": "3.0.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
